# idf-notes-sra

./: README.md  _config.yml
01/: README.md  library
02/: README.md  library.c  library.h  main.c
03/: README.md
04/: README.md  main  main.c  main_processed.c
05/: README.md
05/advanced/: Makefile
05/basic/: Makefile
06/: CMakeLists.txt  README.md  main.c  string_add.c
06/include/: string_add.h
07/: README.md
07/hello_world/main/: main.c
08/: README.md
09/: README.md
10/: README.md
10/hello_world_external_component/: CMakeLists.txt
10/hello_world_external_component/main/: main.c
10/hello_world_internal_component/components/distance/: distance.c
10/hello_world_kconfig/components/distance/: CMakeLists.txt
10/hello_world_kconfig/components/distance/include/: distance.h
10/hello_world_kconfig/main/: Kconfig  main.c
